# test-task-library-

./: .coverage  .gitattributes  .gitignore  README.md  cli.py  library.json  library_management.py  library_service.py  pyproject.toml  readme.txt
library_manager/: README.md  pyproject.toml  readme.md
library_manager/tests/: test_library.py
library_service/: cli.py  library_service.py
tests/: test_library.py
