[tool.poetry]
name = "library-manager"
version = "0.1.0"
description = ""
authors = ["Your <you@nail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
library-manager = "cli:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


