[tool.poetry]
name = "library-manager"
version = "0.1.0"
description = ""
authors = ["Your <you@nail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.scripts]
library-manager = "cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
branch = true
omit = ['library_manager/tests/*']

[tool.coverage.report]
show_missing = true



[tool.coverage.html]
directory = "coverage_html_report"