[tool.poetry]
name = "library-service"
version = "0.1.0"
description = ""
authors = ["Your <you@nail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.scripts]
library-service = "library_service.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
branch = true
omit = ['tests/*']

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 79
target-version = "py312"
fix = true


[tool.coverage.html]
directory = "coverage_html_report"